// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpensesSummary /> should display the summary of multiple filtered items correctly 1`] = `
<div>
  <h3>
    You are viewing 
    3
     
    expenses
     totaling 
    $5.90
  </h3>
</div>
`;

exports[`<ExpensesSummary /> should display the summary of one filtered item correctly 1`] = `
<div>
  <h3>
    You are viewing 
    1
     
    expense
     totaling 
    $0.50
  </h3>
</div>
`;
